# digitizer

./: .gitignore  todo
calc/: adc-input-filter.wxm  adc-low-pass-filter.asc  adc-low-pass-filter.net  adc-low-pass-filter.op.raw  adc-low-pass-filter.plt  adc-low-pass-filter.raw  input-filter-calc.flt  resistances-calc.wxm  solution-calc.wxm
calc/data_check/: data.txt  data_check.R
common/: funcs.h
data-analysis/: .RData  .Rhistory  analysis-02.R  analysis.R  min-square-enum.R
doc/: WiringBipotentiostat.pptx  bom.ods
doc/bnc-socket/: 031-5431-10rfx.igs  link.txt
doc/dc-dc-isolated-5v-12v/: link.txt
doc/dc-dc-isolated-5v-15v/: link.txt
doc/dc-dc-isolated-5v-5v/: link.txt
doc/filtering-inductance/: link.txt
doc/kicad-bom-gen/: kicad-bom-gen.htm
doc/kicad-bom-gen/kicad-bom-gen_files/: ru_AXk4YCAXyAFAnbcD0exEtdn-pCfGW0ODj0SgtBnkHB0.js
doc/ref4533/: link.txt
doc/temperature-sensor-i2c/: link.txt
drawing/: board.FCStd  board.FCStd1  bottom.gcode  bottom.stl  top.stl  washer.FCStd  washer.FCStd1  washer.gcode  washer.stl
electrical/libs/my-lib.pretty/: CP2102.kicad_mod
electrical/relay-board/: _autosave-relay-board.kicad_pcb  fp-lib-table  rel319B.tmp  rel71B1.tmp  relay-board-cache.lib  relay-board.bak  relay-board.cmp  relay-board.kicad_pcb  relay-board.kicad_pcb-bak  relay-board.net  relay-board.sch
electrical/scheme/: dac-v.bak  dac-v.sch  digCAED.tmp  digF900.tmp  digitizer  digitizer-cache.lib  digitizer.bak  digitizer.cmp  digitizer.csv  digitizer.kicad_pcb  digitizer.kicad_pcb-bak  digitizer.net  digitizer.pro  digitizer.sch  digitizer.xml  fp-lib-table  input-filter-attenuator.bak  input-filter-attenuator.sch  zzz.kicad_pcb  zzz.kicad_pcb-bak
electrical/scheme/gerber/: digitizer-B_Cu.gbr  digitizer-B_Mask.gbr  digitizer-B_SilkS.gbr  digitizer-Edge_Cuts.gbr  digitizer-F_Cu.gbr  digitizer-F_Mask.gbr  digitizer-F_SilkS.gbr  digitizer-In1_Cu.gbr  digitizer-In2_Cu.gbr  digitizer-drl_map.gbr  digitizer.drl  zzz-Edge_Cuts.gbr  zzz-F_Cu.gbr
electrical/scheme/oshpark/: digitizer.G2L  digitizer.GBL  digitizer.GKO
firmware/bootloader/: .cproject  .project  Makefile
firmware/bootloader/portld/: STM32F103.ld
firmware/bootloader/src/: cpu_io.c  dfu_ctrl.c  dfu_ctrl.h  hdw_config.h  led_ctrl.c  main.c
firmware/digitizer/: .cproject  .project  Makefile  halconf.h  mcuconf.h
firmware/digitizer/.dep/: adc.o.d  adc_ctrl.o.d  adc_lld.o.d  board.o.d  can.o.d  can_lld.o.d  chcond.o.d  chcore.o.d  chcore_v7m.o.d  chdebug.o.d  chdynamic.o.d  chevents.o.d  chheap.o.d  chlists.o.d  chmboxes.o.d  chmemcore.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chprintf.o.d  chqueues.o.d  chregistry.o.d  chschd.o.d  chsem.o.d  chsys.o.d  (+57 more)
firmware/test-spi/: .cproject  .project  Makefile  main.c
software/: CMakeLists.txt  settings.win32.cmake
software/3dparty/: CMakeLists.txt
software/app/: bit.lib  settings.ini
software/digitizer/: CMakeLists.txt
software/installer/: installer.iss
software/libextctrl/: CMakeLists.txt
software/libextctrl/icee/: digitizer.ice  factory.ice
software/libextctrl/src/: digitizer_ice.cpp  digitizer_ice.h
software/test/: CMakeLists.txt
(+61 files in other folders)
